--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,6 +33,6 @@
             <h2>12</h2>
         </div>
     </div>
-    <!-- <footer class="footer">Made with <img src="images/Vector.svg"> by ProGrad</footer> -->
+    <!-- <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer> -->
 </body>
 </html>
